// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a forbidClick toast 1`] = `
<transition-stub>
  <div role="dialog"
       tabindex="0"
       class="van-popup van-popup--center van-toast van-toast--middle van-toast--success"
       style="z-index: 2004;"
  >
    <i class="van-badge__wrapper van-icon van-icon-success van-toast__icon">
    </i>
  </div>
</transition-stub>
`;

exports[`should render message slot correctly 1`] = `
<transition-stub>
  <div role="dialog"
       tabindex="0"
       class="van-popup van-popup--center van-toast van-toast--middle van-toast--text"
       style="z-index: 2007;"
  >
    <div class="van-toast__text">
      Custom Message
    </div>
  </div>
</transition-stub>
`;
